
[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "atlasapprox_disease"
version = "0.1.0.dev1"
requires-python = ">= 3.8"
dependencies = [
  "requests",
  "numpy",
  "pandas",
]
authors = [
  {name = "Ying Xu", email = "ying.xu3@unsw.edu.au"},
]
description="Cell atlas approximations for diseases, Python API"
readme = "README.md"
license = {file = "LICENSE.txt"}
keywords = [
  "single cell",
  "cell atlas",
  "omics",
  "biology",
  "disease",
  "bioinformatics",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]

Repository = "https://github.com/fabilab/cell_atlas_approximations_disease_API"
"Bug Tracker" = "https://github.com/fabilab/cell_atlas_approximations_disease_API/issues"

[tool.setuptools.packages]
find = { include = ["atlasapprox_disease"] }